src/objects/DMS_Nielson_Product__c.object
<CustomObject>
    <fields>
        <fullName>Diageo_Brand__c</fullName>
        <label>Diageo Segment</label>
        <picklist>
            <picklistValues>
                <fullName>BEER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRANDY/COGNAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIDER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COOLERS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORDIALS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GRAIN ALCOHOL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MULTI COMBO PACKS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POUCH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PREPARED COCKTAILS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RUM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SHANDY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TEQUILA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VODKA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WHISKEY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NONE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Diageo_Category_Formula__c</fullName>
        <description>Converted nielsen category to diageo category</description>
        <formula>CASE( TEXT(Nielsen_Category__c)
,&apos;APERTIF&apos;,&apos;NOT DEFINED&apos;
,&apos;BOURBON&apos;,&apos;NA WHISKEY&apos;
,&apos;BOURBON-BLENDED&apos;,&apos;NA WHISKEY&apos;
,&apos;BOURBON-STRAIGHT/BONDED&apos;,&apos;NA WHISKEY&apos;
,&apos;BRANDY/COGNAC&apos;,&apos;BRANDY/COGNAC&apos;
,&apos;CANADIAN WHISKEY&apos;,&apos;NA WHISKEY&apos;
,&apos;COCKTAILS&apos;,&apos;COCKTAILS&apos;
,&apos;CORDIALS &amp; PROPRIETARY LIQUEUR&apos;,&apos;CORDIALS &amp; PROPRIETARY LIQUEUR&apos;
,&apos;FLAVORED REFRESHMENT&apos;,&apos;NOT DEFINED&apos;
,&apos;GIN&apos;,&apos;GIN&apos;
,&apos;IRISH WHISKEY&apos;,&apos;IRISH WHISKEY&apos;
,&apos;NOT DEFINED&apos;,&apos;NOT DEFINED&apos;
,&apos;REMAINING WHISKEY&apos;,&apos;NA WHISKEY&apos;
,&apos;REPORTED UNCLASSIFIABLE UPC\&apos;S&apos;,&apos;NOT DEFINED&apos;
,&apos;RUM&apos;,&apos;RUM&apos;
,&apos;SCOTCH&apos;,&apos;SCOTCH&apos;
,&apos;TEQUILA&apos;,&apos;TEQUILA&apos;
,&apos;VODKA&apos;,&apos;VODKA&apos;
,&apos;WHISKEY&apos;,&apos;WHISKEY&apos;
,&apos;Wine Based&apos;,&apos;NOT DEFINED&apos;
,&apos;DOMESTIC DRY TABLE&apos;,&apos;WINE&apos;
,&apos;FORTIFIED WINE&apos;,&apos;WINE&apos;
,&apos;IMPORTED DRY TABLE&apos;,&apos;WINE&apos;
,&apos;SPARKLING WINE&apos;,&apos;WINE&apos;
,&apos;STILL WINE&apos;,&apos;WINE&apos;
,&apos;SWEET DESSERT DOMESTIC&apos;,&apos;WINE&apos;
,&apos;WINE BASED&apos;,&apos;WINE&apos;
, TEXT(Nielsen_Category__c))</formula>
        <label>Diageo Category Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nielsen_Brand_Family__c</fullName>
        <label>Brand Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nielsen_Brand_Variant__c</fullName>
        <label>Brand Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nielsen_Brand__c</fullName>
        <label>Brand Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nielsen_Category__c</fullName>
        <label>Category</label>
        <picklist>
            <controllingField>Diageo_Brand__c</controllingField>
            <picklistValues>
                <fullName>ALE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APERTIF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BEER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOURBON-BLENDED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOURBON-STRAIGHT/BONDED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRANDY/COGNAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CANADIAN WHISKEY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COCKTAILS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COOLER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORDIALS &amp; PROPRIETARY LIQUEUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOMESTIC DRY TABLE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLAVORED REFRESHMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IMPORTED DRY TABLE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IRISH WHISKEY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KOSHER TABLE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LIGHT BEER &apos;LOW CAL/ALCOHOL&apos;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MALT LIQUOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEAR BEER/MALT BEVERAGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REMAINING WHISKEY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REPORTED UNCLASSIFIABLE UPC&apos;S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RUM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAKE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SANGRIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCOTCH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STOUT AND PORTER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWEET DESSERT DOMESTIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWEET DESSERT IMPORTED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TEQUILA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VERMOUTH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Nielsen_Size__c</fullName>
        <label>Base Size</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nielsen_Supplier__c</fullName>
        <label>Business Entrps High</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nielsen_Unit__c</fullName>
        <label>Multi Pack</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_CODE__c</fullName>
        <description>Universal Product Code</description>
        <externalId>true</externalId>
        <label>UPC</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UPC_Code_11_Digit__c</fullName>
        <formula>RIGHT(UPC_CODE__c , 11)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UPC Code 11 Digit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_DESC__c</fullName>
        <label>UPC Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Length__c</fullName>
        <formula>LEN(UPC_CODE__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UPC Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Nielson Product</label>
    <nameField>
        <displayFormat>DNP-{00000000}</displayFormat>
        <label>DMS Nielson Product</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DMS Nielson Product</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>